objects/KB_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Único tipo de artículo para cargar todo tipo de contenido.</description>
    <fields>
        <fullName>KB_ArticleType__c</fullName>
        <label>Tipo de Artículo</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contenido Libre</fullName>
                    <default>true</default>
                    <label>Contenido Libre</label>
                </value>
                <value>
                    <fullName>Pregunta y Respuesta</fullName>
                </value>
                <value>
                    <fullName>Paso a Paso</fullName>
                </value>
                <value>
                    <fullName>Video</fullName>
                </value>
                <value>
                    <fullName>Adjunto</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KB_ArticuloActualizado__c</fullName>
        <description>Checkbox que indica si el artículo fue actualizado en los últimos 7 días.</description>
        <formula>AND( (LastPublishedDate &lt;&gt; FirstPublishedDate), 
			((NOW() - LastPublishedDate) &lt;= 7) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artículo Actualizado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_ArticuloDestacadoHasta__c</fullName>
        <description>Se indica la fecha en la cual el artículo deja de ser destacado.</description>
        <inlineHelpText>En caso de no querer destacar el artículo, se debe dejar la fecha en blanco.</inlineHelpText>
        <label>Artículo destacado hasta</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>KB_ArticuloDestacado__c</fullName>
        <formula>(TODAY() &lt; KB_ArticuloDestacadoHasta__c)</formula>
        <label>Artículo Destacado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_ArticuloNuevo__c</fullName>
        <description>Checkbox que indica si el artículo fue creado en los últimos 7 días.</description>
        <formula>AND( (FirstPublishedDate = LastPublishedDate), 
			((NOW() - FirstPublishedDate) &lt;= 7) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Artículo Nuevo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_AssignedCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo &quot;read only&quot; utilizado para las validaciones en la publicación de artículos.</description>
        <label>Assigned Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_AssignedTopic__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo &quot;Read Only&quot; utilizado en las validaciones de publicación de artículos.</description>
        <label>Assigned Topic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KB_Attachment__c</fullName>
        <label>Contenido Adjunto</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>KB_Body__c</fullName>
        <label>Contenido HTML</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KB_ExternalID__c</fullName>
        <description>Campo &quot;Read Only&quot; Generado automáticamente al guardar un registro. Se utiliza en la vinculación de Base de Conocimiento y OmniScripts.</description>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KB_ValidationsMessage__c</fullName>
        <formula>&apos;Para publicar el artículo: &apos; 
+ IF(ISBLANK(Summary),IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;&apos;)+&apos; Falta completar el resumen del artículo.&apos;,&apos;&apos;) 
+ IF(!KB_AssignedCategory__c,IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;&apos;)+&apos; Falta categorizar el artículo.&apos;,&apos;&apos;) 
+ IF(!KB_AssignedTopic__c,IMAGE(&apos;/img/msg_icons/warning16.png&apos;,&apos;&apos;)+&apos; Falta asignarle al menos un tema al artículo.&apos;,&apos;&apos;) 
+ IF(!ISBLANK(Summary) &amp;&amp; KB_AssignedCategory__c &amp;&amp; KB_AssignedTopic__c,IMAGE(&apos;/img/msg_icons/confirm16.png&apos;,&apos;&apos;)+ &apos; Enviar para aprobación.&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Validaciones</label>
        <type>Text</type>
    </fields>
    <label>Contenido</label>
    <pluralLabel>Contenidos</pluralLabel>
    <validationRules>
        <fullName>KB_LimiteCaracteresResumen</fullName>
        <active>true</active>
        <description>Límite de caracteres para el resumen</description>
        <errorConditionFormula>LEN(Summary) &gt; 500</errorConditionFormula>
        <errorMessage>Se ha excedido el límite de caracteres para el Resumen (500 caracteres)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>KB_LimiteCaracteresTitulo</fullName>
        <active>true</active>
        <description>Límite de caracteres para el título</description>
        <errorConditionFormula>LEN(Title) &gt; 150</errorConditionFormula>
        <errorMessage>Se ha excedido el límite de caracteres para el Título (150 caracteres)</errorMessage>
    </validationRules>
</CustomObject>